--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,9 +11,6 @@ main:
   - title: "Publications"
     url: /publications/
 
-  # - title: "Talks"
-  #   url: /talks/    
-
   - title: "Teaching"
     url: /teaching/    
     
@@ -29,5 +26,8 @@ main:
   - title: "CV"
     url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
+
+    - title: "About"
+    url: /talks/    
