--- a/_config.yml
+++ b/_config.yml
@@ -226,6 +226,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  about:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
