--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,5 +29,5 @@ main:
   # - title: "Guide"
   #   url: /markdown/
 
-  - title: "About"
-    url: /talks/    
+  # - title: "About"
+  #   url: /talks/    
