--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "tbui001/tbui001.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile-github.png"
   name             : "Thanh Bui"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
