--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile-github.jpg"
   name             : "Thanh Bui"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Data enthusiast, puzzle solver, and life-long learner"
   location         : "Fayetteville, AR"
   employer         : "University of Arkansas"
   uri              : # URL
